--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 node_modules
 .DS_Store
-package-lock.json
-package.json
 test.js
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Vercel
+.vercel
